--- a/src/App.css
+++ b/src/App.css
@@ -53,11 +53,15 @@ h1 {
 }
 
 .chat-form input {
-  width: 70%;
+  width: 30%;
   padding: 10px;
   border: none;
   border-radius: 4px;
   margin-right: 10px;
+}
+
+.chat-form input[name="chat"] {
+  width: 50%;
 }
 
 .chat-form button {
@@ -70,7 +74,7 @@ h1 {
   cursor: pointer;
   transition: background-color 0.3s;
 }
-/* 
-.chat-form button:hover {
+
+/* .chat-form button:hover {
   background-color: #21a1f1;
 } */
